--- a/css/style.css
+++ b/css/style.css
@@ -926,7 +926,7 @@ a.hvr-outline-out:hover{
 
 
 /*gallery start here*/
-.gallery h3.tittle {
+.gallery-section h3.tittle {
     color:#fff;
     font-size:3.5em;
     padding: 0;
