--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,8 @@ background-color:rgba(255, 255, 255, 0.27);
 }
 .navbar-nav > li {
     text-align: center;
-	width:11%;
+	width:12%;
+    padding: 0px 0px;
 }
 div#navbar {
     padding: 0px ;
