--- a/css/style.css
+++ b/css/style.css
@@ -758,12 +758,11 @@ p.top-para {
         font-size: 92.5%;
 }
 p.ser-para {
-    padding: 7em 2em 1em 2em;
+    padding: 7em 2em 2em 2em;
     background-color: #fff;
     line-height: 1.9em;
-    color: #b60704;
-    text-align: center;
-    font-size:36px;
+    color: #777;
+    text-align:left;
         border-top: 4px solid #F3DA5A;
     border-bottom: 4px solid #2C5592;
 }
