--- a/css/style.css
+++ b/css/style.css
@@ -870,13 +870,14 @@ a.hvr-outline-out:hover{
 /*-- pricing --*/
 
 .wthree-pricing {
-    background: url(../images/gal_ban.jpg) no-repeat 0px 0px;
+    /*background: url(../images/gal_ban.jpg) no-repeat 0px 0px;
     background-size: cover;
     -webkit-background-size: cover;
     -o-background-size: cover;
     -ms-background-size: cover;
     -moz-background-size: cover;
-	background-attachment:fixed;
+	background-attachment:fixed;*/
+    background-color: #fff;
     text-align: center;
     padding: 5em 0;
 }
@@ -929,7 +930,7 @@ a.hvr-outline-out:hover{
 
 /*gallery start here*/
 .gallery-section h3.tittle {
-    color:#fff;
+     color: #b60704;
     font-size:3.5em;
     padding: 0;
     margin: 0;
@@ -1065,6 +1066,24 @@ a.store:hover{
 /*-- clients--*/
 .clients{
 	padding:5em 0;
+    background: url(../images/testimonial.jpg) no-repeat 0px 0px;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -o-background-size: cover;
+    -ms-background-size: cover;
+    -moz-background-size: cover;
+    background-attachment:fixed;
+}
+.clients .heading-agileinfo {
+     color: #fff;
+    font-size:3.5em;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
+.clients .heading-agileinfo span{
+    color:#fff;
+    margin-bottom:15px;
 }
 .clients label.line{
 	background:#000;
@@ -1080,7 +1099,7 @@ a.store:hover{
 .flex-active-slide p {
     line-height: 30px;
     text-align: center;
-    color: #777;
+    color: #d7d7d7;
     font-style: italic;
     width: 70%;
     margin: 30px auto;
@@ -1090,7 +1109,7 @@ a.store:hover{
 
 .client h5 {
     font-size: 25px;
-    color: #b60704;
+    color: #fff;
     text-align: center;
 }
 /*-- //clients--*/
